--- a/resources/views/Home Property/blog-single.html
+++ b/resources/views/Home Property/blog-single.html
@@ -42,109 +42,8 @@
   </head>
   <body>
    
-  <!-- Pre Loader -->
-  <div id="aa-preloader-area">
-    <div class="pulse"></div>
-  </div>
-  <!-- SCROLL TOP BUTTON -->
-    <a class="scrollToTop" href="#"><i class="fa fa-angle-double-up"></i></a>
-  <!-- END SCROLL TOP BUTTON -->
-
-
-  <!-- Start header section -->
-  <header id="aa-header">  
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="aa-header-area">
-            <div class="row">
-              <div class="col-md-6 col-sm-6 col-xs-6">
-                <div class="aa-header-left">
-                  <div class="aa-telephone-no">
-                    <span class="fa fa-phone"></span>
-                    1-900-523-3564
-                  </div>
-                  <div class="aa-email hidden-xs">
-                    <span class="fa fa-envelope-o"></span> info@markups.com
-                  </div>
-                </div>              
-              </div>
-              <div class="col-md-6 col-sm-6 col-xs-6">
-                <div class="aa-header-right">
-                  <a href="register.html" class="aa-register">Register</a>
-                  <a href="signin.html" class="aa-login">Login</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-  <!-- End header section -->
-  <!-- Start menu section -->
-  <section id="aa-menu-area">
-    <nav class="navbar navbar-default main-navbar" role="navigation">  
-      <div class="container">
-        <div class="navbar-header">
-          <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <!-- LOGO -->                                               
-          <!-- Text based logo -->
-          <a class="navbar-brand aa-logo" href="index.html"> Home <span>Property</span></a>
-          <!-- Image based logo -->
-          <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->                     
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-            <li><a href="index.html">HOME</a></li>
-             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="properties.html">PROPERTIES <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="properties.html">PROPERTIES</a></li>
-                <li><a href="properties-detail.html">PROPERTIES DETAIL</a></li>                                            
-              </ul>
-            </li>
-            <li><a href="gallery.html">GALLERY</a></li>                                         
-            <li class="dropdown active">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">BLOG <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="blog-archive.html">BLOG</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
-              </ul>
-            </li>
-            <li><a href="contact.html">CONTACT</a></li>
-           <li><a href="404.html">404 PAGE</a></li>
-          </ul>                          
-        </div><!--/.nav-collapse -->       
-      </div>          
-    </nav> 
-  </section>
-  <!-- End menu section -->
-
-  <!-- Start Proerty header  -->
-  <section id="aa-property-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="aa-property-header-inner">
-            <h2>Blog Details</h2>
-            <ol class="breadcrumb">
-            <li><a href="#">HOME</a></li>            
-            <li class="active">Blog Details</li>
-          </ol>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> 
-  <!-- End Proerty header  -->
-
+ 
+ 
   <!-- Start Blog  -->
   <section id="aa-blog">
     <div class="container">
@@ -152,7 +51,7 @@
         <div class="col-md-12">
           <div class="aa-blog-area">
             <div class="row">
-              <div class="col-md-8">
+              <div class="col-md-12">
                 <div class="aa-blog-content">
                   <div class="row">
                     <div class="col-md-12">
@@ -239,7 +138,7 @@
                         </div>
                         <div class="aa-blog-related-post-area">
                           <div class="row">
-                            <div class="col-md-6 col-sm-6">
+                            <div class="col-md-4 col-sm-6">
                               <article class="aa-blog-single">
                                 <figure class="aa-blog-img">
                                   <a href="#"><img src="img/blog-img-1.jpg" alt="img"></a>
@@ -255,7 +154,23 @@
                                 </div>                   
                               </article>
                             </div>
-                            <div class="col-md-6 col-sm-6">
+                            <div class="col-md-4 col-sm-6">
+                              <article class="aa-blog-single">
+                                <figure class="aa-blog-img">
+                                  <a href="#"><img src="img/blog-img-2.jpg" alt="img"></a>
+                                  <span class="aa-date-tag">15 April, 16</span>
+                                </figure>
+                                <div class="aa-blog-single-content">
+                                  <h3><a href="#">Lorem ipsum dolor sit amet, consectetur.</a></h3>
+                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio est quaerat magnam exercitationem voluptas, voluptatem sed quam ab laborum voluptatum tempore dolores itaque, molestias vitae.</p>
+                                  <div class="aa-blog-single-bottom">
+                                    <a href="#" class="aa-blog-author"><i class="fa fa-user"></i> Admin</a>
+                                    <a href="#" class="aa-blog-comments"><i class="fa fa-comment-o"></i>6</a>
+                                  </div>
+                                </div>                   
+                              </article>
+                            </div>
+                            <div class="col-md-4 col-sm-6">
                               <article class="aa-blog-single">
                                 <figure class="aa-blog-img">
                                   <a href="#"><img src="img/blog-img-2.jpg" alt="img"></a>
@@ -411,106 +326,6 @@
                   </div>                                   
                 </div>
               </div>
-              <!-- Start blog sidebar -->
-              <div class="col-md-4">
-                <aside class="aa-blog-sidebar">
-                  <!-- Start single sidebar -->
-                  <div class="aa-blog-sidebar-single">
-                    <form action="">
-                      <div class="aa-blog-search">
-                        <input class="aa-search-text" type="text" placeholder="Search...">
-                        <button class="aa-search-submit" type="submit">
-                          <i class="fa fa-search"></i>
-                        </button>
-                      </div>
-                    </form>
-                  </div>
-                  <!-- Start single sidebar -->
-                  <div class="aa-blog-sidebar-single">
-                    <h3>Categories</h3>
-                    <ul class="aa-blog-catg">
-                      <li>Properties <span>15000</span></li>
-                      <li>Apartment <span>5000</span></li>
-                      <li>Office  <span>3000</span></li>
-                      <li>Residential <span>4500</span></li>
-                      <li>Commercial <span>1000</span>
-                          <ul>
-                            <li>category 2.1 <span>50</span></li>
-                            <li>category 2.2 <span>100</span></li>
-                          </ul>
-                      </li>
-                      <li>Villa <span>800</span></li>
-                      <li>Bungalow  <span>200</span></li>
-                      <li>News <span>375</span></li>
-                      <li>Reviews <span>458</span></li>
-                    </ul>
-                  </div>
-                  <!-- Start single sidebar -->
-                  <div class="aa-blog-sidebar-single">
-                    <h3>Tags</h3>
-                    <div class="tag-cloud">
-                      <a href="#">Apartment</a>
-                      <a href="#">Propery</a>
-                      <a href="#">Residential</a>
-                      <a href="#">Commercial</a>
-                      <a href="#">Office</a>
-                      <a href="#">Rent</a>
-                      <a href="#">Sale</a>
-                      <a href="#">Villa</a>
-                    </div>                    
-                  </div>
-                  <!-- Start single sidebar -->
-                  <div class="aa-blog-sidebar-single">
-                    <h3>Recent Post</h3>
-                    <div class="aa-blog-recent-post">
-                      <div class="media">
-                        <div class="media-left">
-                          <a href="#">
-                            <img alt="img" src="img/blog-img-3.jpg" class="media-object">
-                          </a>
-                        </div>
-                        <div class="media-body">
-                          <h4 class="media-heading"><a href="#">This is Title</a></h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>                
-                          <span>15 April, 16</span>
-                        </div>              
-                      </div>
-                      <div class="media">
-                        <div class="media-left">
-                          <a href="#">
-                            <img alt="img" src="img/blog-img-2.jpg" class="media-object">
-                          </a>
-                        </div>
-                        <div class="media-body">
-                          <h4 class="media-heading"><a href="#">This is Title</a></h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>                
-                          <span>15 April, 16</span>
-                        </div>              
-                      </div>
-                      <div class="media">
-                        <div class="media-left">
-                          <a href="#">
-                            <img alt="img" src="img/blog-img-1.jpg" class="media-object">
-                          </a>
-                        </div>
-                        <div class="media-body">
-                          <h4 class="media-heading"><a href="#">This is Title</a></h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>                
-                          <span>15 April, 16</span>
-                        </div>              
-                      </div>
-                    </div>                    
-                  </div>
-                  <!-- Start single sidebar -->
-                  <div class="aa-blog-sidebar-single">                    
-                    <div class="aa-banner-ads">
-                      <a href="#">
-                        <img src="img/banner-ads.jpg" alt="banner img">
-                      </a>
-                    </div>                    
-                  </div>
-                </aside>
-              </div>
             </div>
           </div>
         </div>
@@ -519,42 +334,7 @@
   </section>
   <!-- / Blog  -->
 
-  <!-- Footer -->
-  <footer id="aa-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-        <div class="aa-footer-area">
-          <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <div class="aa-footer-left">
-               <p>Designed by <a rel="nofollow" href="http://www.markups.io/">MarkUps.io</a></p>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <div class="aa-footer-middle">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
-                <a href="#"><i class="fa fa-youtube"></i></a>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-12 col-xs-12">
-              <div class="aa-footer-right">
-                <a href="#">Home</a>
-                <a href="#">Support</a>
-                <a href="#">License</a>
-                <a href="#">FAQ</a>
-                <a href="#">Privacy & Term</a>
-              </div>
-            </div>            
-          </div>
-        </div>
-      </div>
-      </div>
-    </div>
-  </footer>
-  <!-- / Footer -->
+  
 
   <!-- jQuery library -->
   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
