--- a/public/User/css/style.css
+++ b/public/User/css/style.css
@@ -2474,7 +2474,7 @@ img {
 ====================*/
 
 #aa-signin {
-  background-image: url("../img/signin-bg.jpg");
+  background-image: url("../img/Anh01.jpg");
   background-position: center center;
   background-size: cover;
   bottom: 0;
